<resources>
    <string name="app_name">Blood Bank</string>

    <string name="google_maps_key" translatable="false">AIzaSyBvJj14oVLyyGm3K0001PS6lw786_Fp6aE</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="phone">الجوال</string>
    <string name="password">كلمة المرور</string>
    <string name="forget_password">هل نسيت كلمة المرور ?</string>
    <string name="dont_have_acc">لاتمتلك حساب ؟ يمكنك التسجيل من هنا</string>
    <string name="remember_me">تذكرني</string>
    <string name="login">دخول</string>
    <string name="create_new_acc">انشاء حساب جديد</string>
    <string name="name">الاسم</string>
    <string name="email">البريد الالكتروني</string>
    <string name="birth_date">تاريخ الميلاد</string>
    <string name="phone_number">رقم الهاتف</string>
    <string name="confirm_password">تاكيد كلمة المرور</string>
    <string name="register">تسجيل</string>
    <string name="chose_donation_date">اختار تاريخ التبرع</string>
    <string name="send">ارسال</string>
    <string name="code">كود التحقق</string>
    <string name="new_password">كلمة المرور الجديدة</string>
    <string name="confirm_new_password">تاكيد كلمة المرور الجديدة</string>
    <string name="change">تغيير</string>
    <string name="splash_text">لوريم ايبسوم هو نموذج افتراضي يوضع فى التصاميم لتعرض على العميل ليتصور طريقة وضع النصوص بالتصاميم سواء كانت تصاميم مطبوعة بروشور او فلاير على سبيل المثال … او نماذج مواقع</string>
    <string name="please_wait">من فضلك انتظر</string>
    <string name="governorate">المحافظة</string>
    <string name="city">المدينة</string>
    <string name="blood_type">فصيلة الدم</string>
    <string name="home">الرئيسة</string>
    <string name="edit_info">تعديل البيانات</string>
    <string name="notification">الاشعارات</string>
    <string name="more">المزيد</string>
    <string name="articles">المقالات</string>
    <string name="donation_request">طلبات التبرع</string>
    <string name="add_to_favorite">تم الاضافة الى المفضلة</string>
    <string name="remove_to_favorite">تم الحذف من المفضلة</string>
    <string name="enter_word_here">ادخل كلمة البحث هنا</string>
    <string name="all_articles">كل المقالات</string>
    <string name="patient_name">اسم الحالة :</string>
    <string name="hospital">مستشفى :</string>
    <string name="city_">المدينة :</string>
    <string name="age">العمر</string>
    <string name="age_">العمر :</string>
    <string name="blood_type_">فصيلة الدم :</string>
    <string name="blood_types">فصائل الدم</string>
    <string name="blood_count">عدد الاكياس</string>
    <string name="blood_count_">عدد الاكياس المطلوبة :</string>
    <string name="address">العنوان :</string>
    <string name="phone_number_">رقم الجوال :</string>
    <string name="call">اتصال</string>
    <string name="donation_request_">طلب تبرع :</string>
    <string name="donation_request__">طلب تبرع</string>
    <string name="note">ملاحظات</string>
    <string name="hospital_name">اسم المستشفى</string>
    <string name="hospital_address">عنوان المستشفى</string>
    <string name="favorite">المفضلة</string>
    <string name="contact_us">تواصل معنا</string>
    <string name="about_app">عن التطبيق</string>
    <string name="rate_app">تقييم التطبيق على المتجر</string>
    <string name="notification_settings">اعدادات الاشعارات</string>
    <string name="log_out">تسجيل الخروج</string>
    <string name="notification_2">التنبيهات</string>
    <string name="edit">تعديل</string>
    <string name="num">01007507317</string>
    <string name="email_">himahamed999@gmail.com</string>
    <string name="message_title">عنوان الرسالة</string>
    <string name="message_text">نص الرسالة</string>
    <string name="save">حفظ</string>
    <string name="governorates">المحافظات</string>
    <string name="log_out_answer">هل تود الخروج</string>
</resources>
