<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/red">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/janna"
                android:text="@string/more"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </LinearLayout>
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/fragment_more_btn_favorite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:background="@drawable/sh_more_btn"
            android:layoutDirection="rtl">

            <ImageView
                style="@style/st_iv_more"
                android:src="@drawable/ic_favorite_fill_red" />

            <TextView
                style="@style/st_tv_more"
                android:text="@string/favorite" />
        </LinearLayout>

        <View style="@style/st_divider" />

        <LinearLayout
            android:id="@+id/fragment_more_btn_connect_us"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:background="@drawable/sh_more_btn"
            android:layoutDirection="rtl">

            <ImageView
                style="@style/st_iv_more"
                android:src="@drawable/ic_mail_red" />

            <TextView
                style="@style/st_tv_more"
                android:text="@string/contact_us" />
        </LinearLayout>

        <View style="@style/st_divider" />

        <LinearLayout
            android:id="@+id/fragment_more_btn_about_app"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:background="@drawable/sh_more_btn"
            android:layoutDirection="rtl">

            <ImageView
                style="@style/st_iv_more"
                android:src="@drawable/ic_idea" />

            <TextView
                style="@style/st_tv_more"
                android:text="@string/about_app" />
        </LinearLayout>

        <View style="@style/st_divider" />

        <LinearLayout
            android:id="@+id/fragment_more_btn_rate_on_store"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:background="@drawable/sh_more_btn"
            android:layoutDirection="rtl">

            <ImageView
                style="@style/st_iv_more"
                android:src="@drawable/ic_star" />

            <TextView
                style="@style/st_tv_more"
                android:text="@string/rate_app" />
        </LinearLayout>

        <View style="@style/st_divider" />

        <LinearLayout
            android:id="@+id/fragment_more_btn_notification_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:background="@drawable/sh_more_btn"
            android:layoutDirection="rtl">

            <ImageView
                style="@style/st_iv_more"
                android:src="@drawable/ic_settings" />

            <TextView
                style="@style/st_tv_more"
                android:text="@string/notification_settings" />
        </LinearLayout>

        <View style="@style/st_divider" />

        <LinearLayout
            android:id="@+id/fragment_more_btn_log_out"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:background="@drawable/sh_more_btn"
            android:layoutDirection="rtl">

            <ImageView
                style="@style/st_iv_more"
                android:src="@drawable/ic_exit" />

            <TextView
                style="@style/st_tv_more"
                android:text="@string/log_out" />
        </LinearLayout>

        <View style="@style/st_divider" />
    </LinearLayout>
</LinearLayout>
