<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/login">

        <ImageView
            android:id="@+id/fragment_new_password_iv_logo"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_margin="60dp"
            android:src="@drawable/logo"
            app:layout_constraintBottom_toBottomOf="@id/fragment_forget_password_gl_guide"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/fragment_forget_password_gl_guide"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_end="365dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/fragment_forget_password_gl_guide">

            <EditText
                android:id="@+id/fragment_new_password_ed_code"
                style="@style/editText_auth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/code" />

            <EditText
                android:id="@+id/fragment_new_password_ed_new_password"
                style="@style/editText_auth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/new_password" />

            <EditText
                android:id="@+id/fragment_new_password_ed_confirm_new_password"
                style="@style/editText_auth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/confirm_new_password" />

            <TextView
                android:id="@+id/fragment_new_password_btn_change"
                style="@style/btn_white"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="24dp"
                android:text="@string/change" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>