<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

    </data>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/fragment_add_donation_tb"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/red">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/janna"
                    android:text="@string/donation_request__"
                    android:textColor="@color/white"
                    android:textSize="18sp" />
            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/fragment_add_donation_tb">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layoutDirection="rtl"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/fragment_add_donation_ed_name"
                    style="@style/editText_auth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/sh_et_bg"
                    android:hint="@string/name"
                    android:layoutDirection="rtl" />

                <EditText
                    android:id="@+id/fragment_add_donation_ed_age"
                    style="@style/editText_auth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/sh_et_bg"
                    android:hint="@string/age"
                    android:layoutDirection="rtl" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/sh_et_bg"
                    android:paddingTop="4dp"
                    android:paddingBottom="4dp">

                    <androidx.appcompat.widget.AppCompatSpinner
                        android:id="@+id/fragment_add_donation_sp_blood_type"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layoutDirection="rtl" />
                </LinearLayout>

                <EditText
                    android:id="@+id/fragment_add_donation_ed_blood_count"
                    style="@style/editText_auth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/sh_et_bg"
                    android:hint="@string/blood_count"
                    android:layoutDirection="rtl" />

                <EditText
                    android:id="@+id/fragment_add_donation_ed_hospital_name"
                    style="@style/editText_auth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/sh_et_bg"
                    android:hint="@string/hospital_name"
                    android:layoutDirection="rtl" />

                <RelativeLayout
                    android:id="@+id/fragment_add_donation_btn_hospital_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/sh_et_bg"
                    android:layoutDirection="rtl">

                    <TextView
                        android:id="@+id/fragment_add_donation_tv_hospital_address"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_marginStart="14dp"
                        android:fontFamily="@font/janna"
                        android:text="@string/hospital_address"
                        android:textColor="@color/red"
                        android:textSize="15sp" />

                    <ImageView
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="8dp"
                        android:padding="4dp"
                        android:src="@drawable/ic_search" />
                </RelativeLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/sh_et_bg"
                    android:paddingTop="4dp"
                    android:paddingBottom="4dp">

                    <androidx.appcompat.widget.AppCompatSpinner
                        android:id="@+id/fragment_add_donation_sp_governorate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layoutDirection="rtl" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/sh_et_bg"
                    android:paddingTop="4dp"
                    android:paddingBottom="4dp">

                    <androidx.appcompat.widget.AppCompatSpinner
                        android:id="@+id/fragment_add_donation_sp_city"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layoutDirection="rtl" />
                </LinearLayout>

                <EditText
                    android:id="@+id/fragment_add_donation_ed_phone"
                    style="@style/editText_auth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/sh_et_bg"
                    android:hint="@string/phone_number"
                    android:layoutDirection="rtl" />

                <EditText
                    android:id="@+id/fragment_add_donation_ed_note"
                    style="@style/editText_auth"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/sh_et_bg"
                    android:gravity="top"
                    android:hint="@string/note"
                    android:layoutDirection="rtl" />

                <TextView
                    android:id="@+id/fragment_add_donation_btn_send"
                    style="@style/btn_red"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="44dp"
                    android:text="@string/send" />
            </LinearLayout>
        </ScrollView>
    </RelativeLayout>
</layout>