<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/login">

        <ImageView
            android:id="@+id/fragment_login_iv_logo"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_margin="60dp"
            android:src="@drawable/logo"
            app:layout_constraintBottom_toBottomOf="@id/fragment_login_gl_guide"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/fragment_login_gl_guide"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_end="365dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layoutDirection="rtl"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/fragment_login_gl_guide">

            <EditText
                android:id="@+id/fragment_login_ed_phone"
                style="@style/editText_auth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/sh_et_bg"
                android:hint="@string/phone"
                android:layoutDirection="rtl"
                android:text="01126545826" />

            <EditText
                android:id="@+id/fragment_login_ed_password"
                style="@style/editText_auth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/password"
                android:text="123456" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layoutDirection="rtl">

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/fragment_login_cb_remember"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:fontFamily="@font/janna"
                    android:text="@string/remember_me"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    android:theme="@style/progressBar" />

                <TextView
                    android:id="@+id/fragment_login_tv_forget_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:fontFamily="@font/janna"
                    android:text="@string/forget_password"
                    android:textColor="@color/white"
                    android:textSize="12sp" />
            </RelativeLayout>

            <TextView
                android:id="@+id/fragment_login_btn_login"
                style="@style/btn_white"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:text="@string/login" />
        </LinearLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/gray"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/fragment_login_tv_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/janna"
                android:padding="6dp"
                android:text="@string/dont_have_acc"
                android:textColor="@color/red"
                android:textSize="14sp" />
        </RelativeLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>